package app.exceptions;

import app.logging.AppLog;

public class DatabaseException extends Exception
{
    public DatabaseException(String userMessage) {
    }
}